Fixing scrollbars showing on other devices while they are hidden on mac

--- a/src/app/custom-table/custom-table.component.scss
+++ b/src/app/custom-table/custom-table.component.scss
@@ -1,6 +1,7 @@
 cdk-virtual-scroll-viewport {
     height: 100%;
-    min-width: 688px;
+    width: 100%;
+    overflow-y: hidden;
 }
 
 .custom-main-container {
